more image sizing tweaking

--- a/content/post/2020-02-06-maximizing-magnetic-volume-the-perfect-bowl.Rmd
+++ b/content/post/2020-02-06-maximizing-magnetic-volume-the-perfect-bowl.Rmd
@@ -37,7 +37,7 @@ For example, here’s how you could split your opponent’s bowls when ɸ is 75&
 
 ![My drawings are rotated 90&deg; clockwise from the problem description (does not affect solution)](/post/2020-02-06-maximizing-magnetic-volume-the-perfect-bowl_files/bowl_calc.jpg){width="58%"}
 
-!Walked through:*
+*Walked through:*
 
 **I.** The minimum angle will be one where the green bowl touches points on both red bowls -- this creates two tangents that you can think of as forming the track the green bowl travels down. Given the distance between the centers of the red bowls is 5 units, the distance between a green and a red bowl[^1] will be half this, 2.5 units. Also, the lines tangent to a red bowl and the green bowl will pass a point halfway between this at 1.25 units from the center of a red circle[^1]. 
 
