--- a/content/post/2020-02-06-maximizing-magnetic-volume-the-perfect-bowl.Rmd
+++ b/content/post/2020-02-06-maximizing-magnetic-volume-the-perfect-bowl.Rmd
@@ -108,14 +108,13 @@ The riddle:
 
 **My Approach:**
 
-
 The Magna-Tiles will form regular pyramids. The question is which *n-sided* pyramid will have the greatest volume. $$(Volume\;of\;a\;pyramid) = \frac{1}{3}(area\;of\;base)(height\;of\;pyramid)$$ Hence we need to first calculate the [Area of the base of the pyramid] and the [Height of the pyramid]. I'll set-up a way of calculating these as a function of the number of (75&deg;-75&deg;-30&deg;) Magna-Tiles.
 
 ## Area of the base of the pyramid 
 
 The side length of the base of our pyramid will be the length of the shortest side of a Magna-Tile. We weren't told the lengths of the sides of the Magna-Tiles but they don't matter for this problem^[As the pyramids created will be similar so each pyramid would scale proportionally to one another.]. To keep things simple, I'll say the two congruent sides of the Magna-Tiles are equal to 1 unit.
 
-Given this, a little trigonometry shows the base of the Magna-Tile has length equal to *2sin(15&deg;).*
+Drawing a line perpendicular to the base splits our Magna-Tile into two congruent triangles. Given the trigonemtric identity that $sin(\theta) = \frac{opposite}{hypotenuse}$ and that the hypotenuse of each triangle was set at 1 unit, we can calculate the length of the base of the Magna-Tile is *2sin(15&deg;).*
 
 ![Base polygon side length](/post/2020-02-06-maximizing-magnetic-volume-the-perfect-bowl_files/base_length.jpg){width="58%"}
 
