--- a/content/post/2020-02-13-fivethirtyeightriddlersolutions-palindrome-debts-and-ambiguous-absolut-value-signs.Rmd
+++ b/content/post/2020-02-13-fivethirtyeightriddlersolutions-palindrome-debts-and-ambiguous-absolut-value-signs.Rmd
@@ -12,7 +12,7 @@ tags:
   - rstats
 ---
 
-This post contains solutions to FiveThirtyEight’s two riddles released 2020-02-07, [Riddler Express] and [Riddler Classic]. Code for figures and solutions can be found on my github page.
+This post contains solutions to FiveThirtyEight’s two riddles released 2020-02-07, [Riddler Express] and [Riddler Classic]. Code for figures and solutions can be found on [my github page](https://github.com/brshallo/brshallo/blob/master/content/post/2020-02-13-fivethirtyeightriddlersolutions-palindrome-debts-and-ambiguous-absolut-value-signs.Rmd).
 
 # Riddler Express
 
@@ -103,7 +103,7 @@ Hence, we will say...
     
 With these rules we can tackle the first part of the problem and think of each interior bar as representing a place-holder, the collection of which must be filled by an equal number of `)` and `(` .
 
-|−1 _ −2 _ −3 _ −4 _ −5 _ −6 _ −7 _ −8 _−9|
+(|−1 _ −2 _ −3 _ −4 _ −5 _ −6 _ −7 _ −8 _−9|)
 
 This can be represented as a combinatorics^[[Khan Academy](khanacademy.org) if you want to brush up on your combinatorics skills.] problem that can be represented by $6 \choose 3$.
 
@@ -200,7 +200,7 @@ solution_9 %>%
   str_view_all("\\)|\\(")
 ```
 
-I made an equation `create_solve_expr_df()` that creates the expressions and computes the solutions.  See the [raw Rmd file](github page link) on my github to see the code^[The code isn't *the most* attractive. The dataframe set-up could be cleaner.  Also I'd like to go back and rewrite the expression part of this using `rlang` and some of the cool things you can do with manipulating environments and expressions in R... but alas... hacked this solution together by just stitching together text...] I wrote to accomplish this.
+I made an equation `create_solve_expr_df()` that creates the expressions and computes the solutions.  See the [raw Rmd file](https://github.com/brshallo/brshallo/blob/master/content/post/2020-02-13-fivethirtyeightriddlersolutions-palindrome-debts-and-ambiguous-absolut-value-signs.Rmd) on my github to see the code^[The code isn't *the most* attractive. The dataframe set-up could be cleaner.  Also I'd like to go back and rewrite the expression part of this using `rlang` and some of the cool things you can do with manipulating environments and expressions in R... but alas... hacked this solution together by just stitching together text...] I wrote to accomplish this.
 
 After creating all possible configurations, I need to actually compute each viable expression to check if any of the configurations resulted in duplicate solutions.
 
